PRC-1482 : Fixing multiple bugs related to the display of a digital content node: updating site-wide paragraph style line height to match style guide specs; adding underline to author field; re-ordering date to appear below the author field; adjustments to layout of the author field to allow line wrapping with author name (avoid author name jumping down to next line when browser width is narrowed)

--- a/docroot/sites/all/themes/prc_foundation/sass/_digital_library.scss
+++ b/docroot/sites/all/themes/prc_foundation/sass/_digital_library.scss
@@ -104,6 +104,12 @@
       .field-name-field-author-name {
         margin-bottom: 0;
         @include bold;
+        > div {
+          text-decoration: underline;
+        }
+        .field-items {
+          float: none;
+        }
       }
       .prc_digital_library_comment_email {
         width: 125px;
